[B][COLOR gold]v4.10.01[/COLOR][/B]
- Added Hulu on supported official providers
- Some cleanup

[B][COLOR gold]v4.10.00[/COLOR][/B]
- Added official streams providers.
  For these providers to work, their equivalent Kodi add-on is required
  to be installed and configured (with active accounts etc).
  (Thanks to a fellow veteran add-on developer for the suggestion and help)
- Orion scraper now moved onto the Oathscrapers package - enable and
  configure it there

[B][COLOR gold]v4.03.09[/COLOR][/B]
- Cleanup unused modules
- Furk fixes/tweaks

[B][COLOR gold]v4.03.08[/COLOR][/B]
- Added support for Easynews

[B][COLOR gold]v4.03.07[/COLOR][/B]
- Fixed non-en language title/aliases parsing for scraping
- Fixed sources sorting issue

[B][COLOR gold]v4.03.06[/COLOR][/B]
- Fixed some performance issues with scraping

[B][COLOR gold]v4.03.05[/COLOR][/B]
- Sources appearance/filtering tweaks

[B][COLOR gold]v4.03.04[/COLOR][/B]
- Code cleanup
- Minor cosmetic fix

[B][COLOR gold]v4.03.03[/COLOR][/B]
- Added People category on main menu (and removed from Movies menu). Opens
  select dialog with options Movies/TV Shows/Biography
- Added saving of people searches
- Removed "Hide movies in cinema" setting/ability. Redundant as releases
  on streaming platforms are usually instantly available, and unreleased titles
  are labelled accordingly
- Better platform detection

[B][COLOR gold]v4.03.02[/COLOR][/B]
- Made some changes to the magnet cached status check function to hopefully
  prevent it from locking the scraping process when a debrid service is down

[B][COLOR gold]v4.03.00-1[/COLOR][/B]
- Cosmetic updates
- Default trailer search method changed to IMDb, as it doesn't require the
  YouTube add-on (and all the burden it carries). One drawback is that it
  doesn't supply season/episode specific related videos

[B][COLOR gold]v4.02.05[/COLOR][/B]
- Added yet another trailer/related videos source to choose: IMDb
  This source does not require the YouTube add-on to work
